finally done with db and fill_db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
   web:
     build: ./Technopark_project
     command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+#    command: bash -c "python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./Technopark_project:/app
     ports:
